hphp/test/zend/bad/ext/reflection/tests/ReflectionObject___toString_basic1.php
<?php

class Foo  {
	public $bar = 1;
}
$f = new foo;

echo new ReflectionObject($f);

?>
